<think> Okay, let me look at this git diff to understand what's being asked here. The user wants a commit message generated based on some changes in the .env.example file.
The change appears to be clearing the APP_KEY line while keeping other environment variables like APP_NAME, APP_ENV, etc., unchanged. This seems related to configuration files where users would need to fill in their own keys for proper deployment or production use.

I should consider why this change is happening - it's likely that they want to prompt developers to set up their own encryption key rather than using a default one from previous development stages. The user probably wants the commit message to be concise yet informative enough about this configuration update.

For the summary part, I need something under 72 characters describing what was changed and why. "Update .env.example: Clear APP_KEY for users to set their own" seems appropriate because it clearly states the action taken (updating) and explains the purpose (clearing the key).

The body should be more detailed but still concise. It could explain that a default key is being removed so developers can generate one themselves, which helps prevent configuration issues when deploying.

I wonder if there's anything else to consider about this change - maybe it was part of removing old configurations or preparing for production? But without additional context from the user, I'll focus on what's visible in the diff and keep the message straightforward.
</think>
**Update .env.example: Clear APP_KEY for users to set their own**

This update clears the default `APP_KEY` value from `.env.example`. The reason is that a default key may have been generated during initial setup. By clearing it, we prompt developers to generate their own secure base64 encryption key and add it to the actual `.env` file before deploying or using the application, preventing potential security issues with pre-shared keys.

```diff
.env.example: Remove default APP_KEY 

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="bCoinmart"
 APP_ENV=local
-APP_KEY=base64:eRhdPdfcuinWRGgwYq0g6AFBdl6W+z9Bo9DY+Vdx6D4=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://bcoinmart-v2.test
 
